[tool.poetry]
name = "boardgame-SNA"
version = "0.1.0"
description = "Boardgame Social Network Analysis"
authors = ["Russell Martin <russell@martinandbrown.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.1"
pandas = "^2.1.4"
sympy = "^1.12"
numpy = "^1.26.3"
SciPy = "^1.11.4"
requests = "^2.31.0"
altair = "^5.2.0"
dill = "^0.3.7"
Flask = "^3.0.0"
folium = "^0.15.1"
gensim = "^4.3.2"
gunicorn = "^21.2.0"
ipykernel = "^6.28.0"
Jinja2 = "^3.1.3"
jupyterlab = "^4.0.10"
matplotlib = "^3.8.2"
more-itertools = "^10.2.0"
nbformat = "^5.9.2"
nbzip = "^0.1.0"
oauthlib = "^3.2.2"
pmdarima = "^2.0.4"
spacy = "^3.7.2"
SQLAlchemy = "^2.0.25"
statsmodels = "^0.14.1"
tqdm = "^4.66.1"
beautifulsoup4 = "^4.12.2"
scikit-learn = "^1.3.2"
lxml = "^5.1.0"
seaborn = "^0.13.1"
networkx = "^3.2.1"
pyarrow = "^15.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
